--- a/apps/kiosk/src/renderer/src/assets/main.pcss
+++ b/apps/kiosk/src/renderer/src/assets/main.pcss
@@ -2,6 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "daisyui" {
+  themes: retro, dark;
+}
 
 body {
   display: flex;
