feat: slides, all pages done

--- a/apps/kiosk/src/renderer/src/assets/main.pcss
+++ b/apps/kiosk/src/renderer/src/assets/main.pcss
@@ -20,7 +20,7 @@ code {
   font-weight: 600;
   padding: 3px 5px;
   border-radius: 2px;
-  background-color: var(--color-background-mute);
+  background-color: var(--color-background-mute) !important;
   font-family:
     ui-monospace,
     SFMono-Regular,
